--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,8 +1,3 @@
-@font-face {
-  font-family: 'open-sans';
-  src: url('OpenSans-Regular.ttf')  format('truetype'), /* Safari, Android, iOS */
-}
-
 html { 
   position: relative;
   min-height: 100%;
@@ -15,6 +10,10 @@ body {
 
 .float-right {
 	float: right;
+}
+
+.d-inline {
+  display: inline;
 }
 
 /* ----- Blue Nav Bar ----- */
@@ -92,7 +91,7 @@ main {
 .filter-container {
 	background-color: #F6F6F6;
 	width: 100%;
-	height: 80px;
+	line-height: 80px;
 }
 
 .card {
@@ -118,7 +117,7 @@ main {
 	text-align: center;
 	width: 100%;
 	height: 100px;
-	border-bottom: 1px solid #757575;
+	border-bottom: 1px solid #ECECEC;
 }
 
 .phone-container {
@@ -162,10 +161,16 @@ main {
 	background-color: #F6F6F6;
 	height: 100px;
 	width: 100%;
+  display: flex;
+  flex-wrap: wrap;
 }
 
 .card-footer img {
 	height: 20px;
+}
+
+.service-certification {
+  width: 50%;
 }
 
 /* ----- Footer ----- */
