--- a/src/css/style.css
+++ b/src/css/style.css
@@ -173,6 +173,108 @@ main {
   width: 50%;
 }
 
+/* ----- Tooltip ----- */
+[data-tooltip] {
+  position: relative;
+  cursor: pointer;
+  vertical-align: bottom;
+}
+
+.tooltip:after {
+  visibility: hidden;
+  content: attr(data-tooltip);
+  white-space: nowrap;
+  padding: 10px;
+  background: rgba(97, 97, 97, 0.9);
+  color: #fff;
+  z-index: 100;
+  font-size: 12px;
+  font-weight: 500;
+  border-radius: 2px;
+  margin-left: 5px;
+}
+
+.tooltip:hover:after {
+  visibility: visible;
+}
+
+/* ----- Tooltip on the Right ----- */
+/*.tooltip-right:after {
+  top: 50%;
+  left: 100%;
+}
+*/
+
+.tooltip-right:hover:before,
+.tooltip-right:hover:after {
+  transform: translateX(5px) translateY(-50%);   
+}
+
+.tooltip img {
+  border-radius: 5px;
+  vertical-align: middle;
+}
+
+/* ----- Custom Checkbox ----- */
+/* Customize the label (the container) */
+.custom-checkbox {
+  position: relative;
+  padding-left: 35px;
+  cursor: pointer;
+  font-size: 22px;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+}
+
+/* Hide the browser's default checkbox */
+.custom-checkbox input {
+  display: none;
+}
+
+/* Create a custom checkbox */
+.checkmark {
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 25px;
+  width: 25px;
+  background-color: #eee;
+  border-radius: 5px;
+}
+
+/* On mouse-over, add a grey background color */
+.custom-checkbox:hover input ~ .checkmark {
+  background-color: #ccc;
+}
+
+/* When the checkbox is checked, add a blue background */
+.custom-checkbox input:checked ~ .checkmark {
+  background-color: #216DDF;
+}
+
+/* Create the checkmark/indicator (hidden when not checked) */
+.checkmark:after {
+  content: "";
+  position: absolute;
+  display: none;
+}
+
+/* Show the checkmark when checked */
+.custom-checkbox input:checked ~ .checkmark:after {
+  display: block;
+}
+
+/* Style the checkmark/indicator */
+.custom-checkbox .checkmark:after {
+  left: 8px;
+  top: 9px;
+  width: 8px;
+  border: solid white;
+  border-width: 8px 0 0 0;
+}
+
 /* ----- Footer ----- */
 footer {
 	height: 130px;
