--- a/src/css/style.css
+++ b/src/css/style.css
@@ -289,6 +289,7 @@ main {
 }
 
 /* ----- Modal ----- */
+/* jhghjghgffgjhgfjgfg
 .modal {
   position: fixed; /* Stay in place */
   z-index: 500; /* Sit on top */
