--- a/src/css/style.css
+++ b/src/css/style.css
@@ -678,8 +678,8 @@ footer .icon {
   max-height: 250px;
 }
 
-.menu-content {
-
+.menu-content button {
+  color: #0BC9c8;
 }
 
 .menu-title {
@@ -696,7 +696,7 @@ footer .icon {
   background: #fff;
   border-top: 4px solid #0BC9c8;
   border-bottom: 4px solid #0BC9C8;;
-  height: 300px;
+  height: 420px;
   z-index: 100;
 }
 
@@ -712,8 +712,14 @@ footer .icon {
 .menu-open .menu-content .menu-link {
   background: #F6F6F6;
   color: #626262 !important;
-  display: inline !important;
   list-style: none;
+  padding: 25px;
+  margin-left: -40px;
+  margin-bottom: 2px;
+}
+
+.menu-open .menu-mobile .menu-content .menu-link img {
+  display: inline;
 }
 
 .menu-closed .menu-mobile .menu-content {
