--- a/src/css/style.css
+++ b/src/css/style.css
@@ -4,7 +4,7 @@ html {
 }
 
 body { 
-  margin: 0 0 100px 0;
+  margin: 0 0 170px 0;
   font-family: 'open-sans', sans-serif;
 }
 
@@ -264,6 +264,7 @@ main {
   padding-left: 75px;
   cursor: pointer;
   font-size: small;
+  text-transform: capitalize;
   -webkit-user-select: none;
   -moz-user-select: none;
   -ms-user-select: none;
