--- a/src/css/style.css
+++ b/src/css/style.css
@@ -95,6 +95,8 @@ main {
   padding-top: 100px;
 }
 
+/* ----- Filter Section ----- */
+
 .filter-container {
 	background-color: #F6F6F6;
 	width: 100%;
@@ -117,6 +119,106 @@ main {
   display: inline-block;
 }
 
+
+/* ----- Tooltip ----- */
+[data-tooltip] {
+  position: relative;
+  cursor: pointer;
+  vertical-align: bottom;
+}
+
+.tooltip:after {
+  visibility: hidden;
+  content: attr(data-tooltip);
+  white-space: nowrap;
+  padding: 10px;
+  background: rgba(97, 97, 97, 0.9);
+  color: #fff;
+  z-index: 100;
+  font-size: 12px;
+  font-weight: 500;
+  border-radius: 2px;
+  margin-left: 5px;
+}
+
+.tooltip:hover:after {
+  visibility: visible;
+}
+
+/* ----- Tooltip on the Right ----- */
+.tooltip-right:hover:before,
+.tooltip-right:hover:after {
+  transform: translateX(5px) translateY(-50%);   
+}
+
+.tooltip img {
+  border-radius: 5px;
+  vertical-align: middle;
+  margin-left: 8px;
+}
+
+/* ----- Custom Checkbox ----- */
+/* Customize the label (the container) */
+.custom-checkbox {
+  position: relative;
+  padding-left: 75px;
+  cursor: pointer;
+  font-size: small;
+  text-transform: capitalize;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+}
+
+/* Hide the browser's default checkbox */
+.custom-checkbox input {
+  display: none;
+}
+
+/* Create a custom checkbox */
+.checkmark {
+  position: absolute;
+  top: -5px;
+  left: 35px;
+  height: 25px;
+  width: 25px;
+  background-color: #eee;
+  border-radius: 5px;
+}
+
+/* On mouse-over, add a grey background color */
+.custom-checkbox:hover input ~ .checkmark {
+  background-color: #ccc;
+}
+
+/* When the checkbox is checked, add a blue background */
+.custom-checkbox input:checked ~ .checkmark {
+  background-color: #216DDF;
+}
+
+/* Create the checkmark/indicator (hidden when not checked) */
+.checkmark:after {
+  content: "";
+  position: absolute;
+  display: none;
+}
+
+/* Show the checkmark when checked */
+.custom-checkbox input:checked ~ .checkmark:after {
+  display: block;
+}
+
+/* Style the checkmark/indicator */
+.custom-checkbox .checkmark:after {
+  left: 8px;
+  top: 9px;
+  width: 8px;
+  border: solid white;
+  border-width: 8px 0 0 0;
+}
+
+/* ----- Card ----- */
 .card {
   display: inline-flex;
   flex-flow: row wrap;
@@ -217,104 +319,6 @@ main {
 
 .service-certification {
   width: 50%;
-}
-
-/* ----- Tooltip ----- */
-[data-tooltip] {
-  position: relative;
-  cursor: pointer;
-  vertical-align: bottom;
-}
-
-.tooltip:after {
-  visibility: hidden;
-  content: attr(data-tooltip);
-  white-space: nowrap;
-  padding: 10px;
-  background: rgba(97, 97, 97, 0.9);
-  color: #fff;
-  z-index: 100;
-  font-size: 12px;
-  font-weight: 500;
-  border-radius: 2px;
-  margin-left: 5px;
-}
-
-.tooltip:hover:after {
-  visibility: visible;
-}
-
-/* ----- Tooltip on the Right ----- */
-.tooltip-right:hover:before,
-.tooltip-right:hover:after {
-  transform: translateX(5px) translateY(-50%);   
-}
-
-.tooltip img {
-  border-radius: 5px;
-  vertical-align: middle;
-  margin-left: 8px;
-}
-
-/* ----- Custom Checkbox ----- */
-/* Customize the label (the container) */
-.custom-checkbox {
-  position: relative;
-  padding-left: 75px;
-  cursor: pointer;
-  font-size: small;
-  text-transform: capitalize;
-  -webkit-user-select: none;
-  -moz-user-select: none;
-  -ms-user-select: none;
-  user-select: none;
-}
-
-/* Hide the browser's default checkbox */
-.custom-checkbox input {
-  display: none;
-}
-
-/* Create a custom checkbox */
-.checkmark {
-  position: absolute;
-  top: -5px;
-  left: 35px;
-  height: 25px;
-  width: 25px;
-  background-color: #eee;
-  border-radius: 5px;
-}
-
-/* On mouse-over, add a grey background color */
-.custom-checkbox:hover input ~ .checkmark {
-  background-color: #ccc;
-}
-
-/* When the checkbox is checked, add a blue background */
-.custom-checkbox input:checked ~ .checkmark {
-  background-color: #216DDF;
-}
-
-/* Create the checkmark/indicator (hidden when not checked) */
-.checkmark:after {
-  content: "";
-  position: absolute;
-  display: none;
-}
-
-/* Show the checkmark when checked */
-.custom-checkbox input:checked ~ .checkmark:after {
-  display: block;
-}
-
-/* Style the checkmark/indicator */
-.custom-checkbox .checkmark:after {
-  left: 8px;
-  top: 9px;
-  width: 8px;
-  border: solid white;
-  border-width: 8px 0 0 0;
 }
 
 /* ----- Modal ----- */
@@ -729,57 +733,176 @@ footer .icon {
 /* ----- Mobile ----- */
 @media screen and (max-width: 600px) {
 
-/* NavBars */
-.main {
-  background-position-x: center;
-}
+  /* NavBars */
+  .main {
+    background-position-x: center;
+  }
 
-#blue-nav,
-.main-nav-link {
-  display:none;
-}
+  #blue-nav,
+  .main-nav-link {
+    display:none;
+  }
 
-#main-nav {
-  height: 55px;
-}
-#main-nav .logo {
-  margin: 20px 10px 15px 8px;
-  height: 20px;
-}
+  #main-nav {
+    height: 55px;
+  }
+  #main-nav .logo {
+    margin: 20px 10px 15px 8px;
+    height: 20px;
+  }
 
+  /* Filter */
+  .filter-container {
+    margin-left: -15px;
+    padding-right: 30px;
+    padding-top: 15px;
+  }
 
-/* Filter */
-.filter-container {
-  margin-left: -15px;
-  padding-right: 30px;
-}
+  .filter-container .margin-left {
+    font-size: large;
+    margin-left: 20px;
+    margin-top: 15px;
+    display: inline-block;
+  }
 
-.container {
-  margin: 10px 15px;
-}
+  .container {
+    margin: 10px 15px;
+  }
 
-.filter-mobile {
-  display: inline;
-}
+  .filter-mobile {
+    display: inline;
+  }
 
+  .menu-button {
+    background: #fff;
+    letter-spacing: 0.025rem;
+    box-sizing: border-box;
+    position: absolute;
+    cursor: pointer;
+    margin-left: 2.5%;
+    border: 1px solid #D8D8D8;
+    transition: background .3s ease;
+  }
 
-/* Cards */
-.card {
-  width: 100%;
-  margin: 0 0 2px 0;
-}
+  .menu-button p {
+    margin-left: 20px;
+    margin-top: 15px;
+    font-size: large;
+  }
 
-.phone-number {
-  width: 245px;
-  background: #216DDF;
-  margin-left: 45px;
-}
+  .menu-button:hover {
+    transition: background .3s ease;
+  }
 
-.phone-container .phone-number p {
-  color: #fff;
-}
+  .menu-button:focus {
+    outline:none;
+  }
 
-/* Modal */
+  .triangle {
+    font-size: 70%;
+    padding: 5px 20px;
+    line-height: 45px;
+    margin-top: -15px;
+    margin-left: 20px;
+    background-color: #F6F6F6;
+    border-left: 1px solid #D8D8D8;
+    float: right;
+  }
+
+  .menu .filter-menu-content {
+    padding: 8px 0;
+    position: relative;
+    margin-top: 0px;
+    margin-left: 20px;
+    list-style: none;
+    background: #fff;
+    width: 90%;
+    height: 225px;
+    border: 1px solid #D8D8D8;
+  }
+
+  .menu .filter-menu-content li {
+    padding: 10px;
+  }
+
+  .filter-menu-content .tooltip {
+    left: 55%;
+    top: -45px;
+  }
+
+  .tooltip-bottom:after {
+    top: 100%;
+    left: 50%;
+   }
+      
+  .tooltip-bottom:hover:before,
+  .tooltip-bottom:hover:after {
+    transform: translateX(-50%) translateY(5px);
+  }
+
+  .custom-checkbox {
+    padding-left: 55px;
+    font-size: x-large;
+  }
+
+  .menu-height {
+    max-height: 250px;
+  }
+
+  .filter-menu-open {
+    position: absolute;
+    margin: 56px 0px;
+    width: 100%;
+    height: 265px;
+    z-index: 100;
+    left: 0;
+    background: #F6F6F6;
+  }
+
+  .filter-menu-open .menu-mobile {
+    visibility: visible;
+    z-index: 1;
+  }
+
+  .menu-open .menu-content .menu-link {
+    background: #F6F6F6;
+    color: #626262 !important;
+    list-style: none;
+    padding: 25px;
+    margin-left: -40px;
+    margin-bottom: 2px;
+  }
+
+  .menu-closed .filter-menu-content,
+  .menu-closed .tooltip {
+    display: none;
+  }
+
+  .modal-content {
+    left: 37%;
+  }
+
+  /* Cards */
+  .card {
+    width: 100%;
+    margin: 2px 0;
+  }
+
+  .phone-number {
+    width: 85%;
+    background: #216DDF;
+    margin-left: 30px;
+  }
+
+  .phone-container .phone-number p {
+    color: #fff;
+  }
+
+  .card-footer {
+    padding: 20px 0 20px 45px;
+  }
+
+  /* Modal */
   .modal-content {
     width: 85%;
     height: 800px;
@@ -811,12 +934,16 @@ footer .icon {
   }
 
   .mobile-checkbox {
-    display: inline;
-    line-height: 75px;
+    display: flex;
+    margin: 30px 0;
   }
 
-  .mobile-checkbox .custom-checkbox {
-    margin: 15px;
+  .checkmark {
+    top: 0;
+  }
+
+  .mobile-checkbox .custom-checkbox input {
+    display: none;
   }
 
   .mobile-submit {
